--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "datetime>=5.5",
+    "ipykernel>=6.29.5",
     "openai>=1.95.1",
     "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
