--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "anthropic>=0.75.0",
     "datetime>=5.5",
     "ipykernel>=6.29.5",
     "openai>=1.95.1",
