--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,14 @@ dependencies = [
     "pandas>=2.3.1",
     "python-dotenv>=1.1.1",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=9.0.2",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["*_tests.py", "test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
